# webhooks

./: .dockerignore  .gitignore  .local.env  Dockerfile  LICENSE  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
app/: __init__.py
app/common/: util.py
interface/web/: main.py
interface/web/routes/: mailgun.py  status.py
