[tool.poetry]
name = "webhooks"
version = "0.1.0"
description = ""
authors = ["Pasha Dudka <dudka.pavel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
httpx = "*"
uvicorn = "*"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
